[gd_scene load_steps=6 format=1]

[ext_resource path="res://scene/menu/loadout_selector.gd" type="Script" id=1]
[ext_resource path="res://font/Nestill-Regular-Small.fnt" type="BitmapFont" id=2]
[ext_resource path="res://font/Magra-Regular.fnt" type="BitmapFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="loadout_selector" type="Control"]

anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.109375
margin/top = 0.24
margin/right = 0.890625
margin/bottom = 0.916667
script/script = ExtResource( 1 )
weapon_dir = "res://entity/weapon"

[node name="budget_bar" type="ProgressBar" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="budget_label" type="Label" parent="."]

anchor/left = 2
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.01
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Budget: FIXME/FIXME"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="weapon_list" type="ItemList" parent="."]

anchor/right = 2
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.3
margin/bottom = 0.0
custom_styles/bg_focus = SubResource( 1 )

[node name="loadout_list" type="ItemList" parent="."]

anchor/left = 2
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.3
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/bg_focus = SubResource( 2 )


